5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1800_2567.log
== SUBMITION (2019-06-13 09:53:44) 
-- CODE:
a = int(input(""))
for i in range (a):
	print('*'*(a-i))
fot in range (a):
	print('*'*(i+1))
-- EXECUTION TIME:
0.776864
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 4
    fot in range (a):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:53:53) 
-- CODE:
a = int(input(""))
for i in range (a):
	print('*'*(a-i))
fot in range (a):
	print('*'*(i+1))
-- EXECUTION TIME:
0.661735
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 4
    fot in range (a):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:54:01) 
-- CODE:
a = int(input())
for i in range (a):
	print('*'*(a-i))
fot in range (a):
	print('*'*(i+1))
-- EXECUTION TIME:
0.842973
-- ERROR:
  File "/home/codebench/codes/1800/2567/main.py", line 4
    fot in range (a):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:58:14) 
-- CODE:
a = int(input())
for i in range(a):
	print('*'*(a-i))
for i in range(a):
	print('*'*(i+1))
-- EXECUTION TIME:
0.715664
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
